deployments.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "2"
    labels:
      app: blue
    name: blue
    namespace: bluegreen
  spec:
    progressDeadlineSeconds: 600
    replicas: 9
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: blue
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: blue
      spec:
        containers:
        - env:
          - name: RESPONSE
            value: Hello from Blue
          image: openshift/hello-openshift
          imagePullPolicy: Always
          name: hello-openshift
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        terminationGracePeriodSeconds: 30
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "2"
    labels:
      app: green
    name: green
    namespace: bluegreen
  spec:
    progressDeadlineSeconds: 600
    replicas: 9
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: green
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: green
      spec:
        containers:
        - env:
          - name: RESPONSE
            value: Hello from Green
          image: openshift/hello-openshift
          imagePullPolicy: Always
          name: hello-openshift
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        terminationGracePeriodSeconds: 30
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
