svc.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: blue
    name: blue
    namespace: bluegreen
  spec:
    clusterIP: 172.30.93.249
    clusterIPs:
    - 172.30.93.249
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 8080
    selector:
      app: blue
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: green
    name: green
    namespace: bluegreen
  spec:
    clusterIP: 172.30.253.138
    clusterIPs:
    - 172.30.253.138
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 8080
    selector:
      app: green
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
